codex-rs/tui/src/chatwidget/snapshots/nori_tui__chatwidget__tests__acp_markdown_list_response.snap
---
source: tui/src/chatwidget/tests.rs
expression: term.backend().vt100().screen().contents()
---
• Here are the key considerations for your ACP integration:

  1. Protocol Compliance
      - Use JSON-RPC 2.0 message format
      - Handle bidirectional communication
      - Support session management
  2. Event Handling
      - Subscribe to session/update notifications
      - Process agent_message_chunk for streaming
      - Handle agent_reasoning_chunk for thinking
  3. Error Recovery
      - Implement reconnection logic
      - Buffer partial messages
      - Log protocol violations

  Would you like me to elaborate on any of these points?
