codex-rs/tui/src/chatwidget/snapshots/nori_tui__chatwidget__tests__acp_multi_turn_conversation.snap
---
source: tui/src/chatwidget/tests.rs
expression: combined
---
• I can help you refactor that function. First, let me analyze the current
  implementation.
─ Worked for 0s ────────────────────────────────────────────────────────────────

• Here's the refactored version:
  
  fn process(data: &str) -> Result<String, Error> {
      data.parse()
  }
