codex-rs/tui/src/chatwidget/snapshots/nori_tui__chatwidget__tests__blackbox_model_picker_open.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                                                                                    "
"                                                                                                    "
"  Select Model and Effort                                                                           "
"  Access legacy models by running codex -m <model_name> or in your config.toml                      "
"                                                                                                    "
"  1. Mock ACP Agent           Mock agent for testing purposes.                                      "
"  2. Claude                   Anthropic's Claude via Agent Context Protocol.                        "
"› 3. gpt-5.1-codex (current)  Optimized for codex.                                                  "
"  4. gpt-5.1-codex-mini       Optimized for codex. Cheaper, faster, but less capable.               "
"  5. gpt-5.1                  Broad world knowledge with strong general reasoning.                  "
"                                                                                                    "
"  Press enter to select reasoning effort, or esc to dismiss.                                        "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
