codex-rs/tui/src/chatwidget/snapshots/nori_tui__chatwidget__tests__exec_approval_history_decision_approved_short.snap
---
source: tui/src/chatwidget/tests.rs
expression: lines_to_single_string(&decision)
---
✔ You approved Nori to runecho hello world this time
